# MaxVision

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/routers/: websocket.py
app/services/: __init__.py  line_scan.py
app/templates/: index.html
frontend/: vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: index.js
frontend/src/components/Canvas/: Canvas.jsx  Canvas.module.css
frontend/src/components/CanvasControls/: CanvasControls.jsx  CanvasControls.module.css  index.js
frontend/src/components/DefectCountChart/: DefectCountChart.jsx  DefectCountChart.module.css  index.js
frontend/src/components/DefectStatsTable/: DefectStatsTable.jsx  DefectStatsTable.module.css  index.js
frontend/src/components/DefectsFilter/: DefectsFilter.jsx  DefectsFilter.module.css  index.js
frontend/src/components/Header/: Header.jsx  Header.module.css
frontend/src/components/Panel/: Panel.jsx  Panel.module.css
frontend/src/components/RecordingToggle/: RecordingToggle.jsx  RecordingToggle.module.css  index.js
static/: index.html
static/assets/: index-B5goBgYn.js  index-B8r4jvrT.css  index-BtOVTTFy.js  index-BwYsXlrr.css  index-C-PHb4ex.js  index-C-sKm0MP.js  index-CK3VPhJe.css  index-CKFMsmiu.js  index-CWjN479U.css  index-CnrbwrnQ.js  index-CzPNFOGv.css  index-DB-YkgM7.js  index-DJ8FKg4-.css  index-FpXC6b9t.js  index-I8LSABa4.css  index-M04vxlAF.css  index-ZcjoTV2X.js  index-vBGpi8VC.js
static/css/: style.css
static/js/: app.js
tests/: test_main.py
(+19 files in other folders)
